@@ -38,15 +38,14 @@ class AssetLoadingTask implements AsyncTask<Void> {
 	final AsyncExecutor executor;
 	final long startTime;
 
-	volatile boolean asyncDone = false;
-	volatile boolean dependenciesLoaded = false;
+	volatile boolean asyncDone;
+	volatile boolean dependenciesLoaded;
 	volatile Array<AssetDescriptor> dependencies;
-	volatile AsyncResult<Void> depsFuture = null;
-	volatile AsyncResult<Void> loadFuture = null;
-	volatile Object asset = null;
+	volatile AsyncResult<Void> depsFuture;
+	volatile AsyncResult<Void> loadFuture;
+	volatile Object asset;
 
-	int ticks = 0;
-	volatile boolean cancel = false;
+	volatile boolean cancel;
 
 	public AssetLoadingTask (AssetManager manager, AssetDescriptor assetDesc, AssetLoader loader, AsyncExecutor threadPool) {
 		this.manager = manager;
@@ -59,6 +58,7 @@ class AssetLoadingTask implements AsyncTask<Void> {
 	/** Loads parts of the asset asynchronously if the loader is an {@link AsynchronousAssetLoader}. */
 	@Override
 	public Void call () throws Exception {
+		if (cancel) return null;
 		AsynchronousAssetLoader asyncLoader = (AsynchronousAssetLoader)loader;
 		if (!dependenciesLoaded) {
 			dependencies = asyncLoader.getDependencies(assetDesc.fileName, resolve(loader, assetDesc), assetDesc.params);
@@ -72,6 +72,7 @@ class AssetLoadingTask implements AsyncTask<Void> {
 			}
 		} else {
 			asyncLoader.loadAsync(manager, assetDesc.fileName, resolve(loader, assetDesc), assetDesc.params);
+			asyncDone = true;
 		}
 		return null;
 	}
@@ -83,12 +84,10 @@ class AssetLoadingTask implements AsyncTask<Void> {
 	 * @return true in case the asset was fully loaded, false otherwise
 	 * @throws GdxRuntimeException */
 	public boolean update () {
-		ticks++;
-		if (loader instanceof SynchronousAssetLoader) {
+		if (loader instanceof SynchronousAssetLoader)
 			handleSyncLoader();
-		} else {
+		else
 			handleAsyncLoader();
-		}
 		return asset != null;
 	}
 
@@ -103,45 +102,43 @@ class AssetLoadingTask implements AsyncTask<Void> {
 			}
 			removeDuplicates(dependencies);
 			manager.injectDependencies(assetDesc.fileName, dependencies);
-		} else {
+		} else
 			asset = syncLoader.load(manager, assetDesc.fileName, resolve(loader, assetDesc), assetDesc.params);
-		}
 	}
 
 	private void handleAsyncLoader () {
 		AsynchronousAssetLoader asyncLoader = (AsynchronousAssetLoader)loader;
 		if (!dependenciesLoaded) {
-			if (depsFuture == null) {
+			if (depsFuture == null)
 				depsFuture = executor.submit(this);
-			} else {
-				if (depsFuture.isDone()) {
-					try {
-						depsFuture.get();
-					} catch (Exception e) {
-						throw new GdxRuntimeException("Couldn't load dependencies of asset: " + assetDesc.fileName, e);
-					}
-					dependenciesLoaded = true;
-					if (asyncDone) {
-						asset = asyncLoader.loadSync(manager, assetDesc.fileName, resolve(loader, assetDesc), assetDesc.params);
-					}
+			else if (depsFuture.isDone()) {
+				try {
+					depsFuture.get();
+				} catch (Exception e) {
+					throw new GdxRuntimeException("Couldn't load dependencies of asset: " + assetDesc.fileName, e);
 				}
-			}
-		} else {
-			if (loadFuture == null && !asyncDone) {
-				loadFuture = executor.submit(this);
-			} else {
-				if (asyncDone) {
+				dependenciesLoaded = true;
+				if (asyncDone)
 					asset = asyncLoader.loadSync(manager, assetDesc.fileName, resolve(loader, assetDesc), assetDesc.params);
-				} else if (loadFuture.isDone()) {
-					try {
-						loadFuture.get();
-					} catch (Exception e) {
-						throw new GdxRuntimeException("Couldn't load asset: " + assetDesc.fileName, e);
-					}
-					asset = asyncLoader.loadSync(manager, assetDesc.fileName, resolve(loader, assetDesc), assetDesc.params);
-				}
 			}
+		} else if (loadFuture == null && !asyncDone)
+			loadFuture = executor.submit(this);
+		else if (asyncDone)
+			asset = asyncLoader.loadSync(manager, assetDesc.fileName, resolve(loader, assetDesc), assetDesc.params);
+		else if (loadFuture.isDone()) {
+			try {
+				loadFuture.get();
+			} catch (Exception e) {
+				throw new GdxRuntimeException("Couldn't load asset: " + assetDesc.fileName, e);
+			}
+			asset = asyncLoader.loadSync(manager, assetDesc.fileName, resolve(loader, assetDesc), assetDesc.params);
 		}
+	}
+
+	/** Called when this task is the task that is currently being processed and it is unloaded. */
+	public void unload () {
+		if (loader instanceof AsynchronousAssetLoader)
+			((AsynchronousAssetLoader)loader).unloadAsync(manager, assetDesc.fileName, resolve(loader, assetDesc), assetDesc.params);
 	}
 
 	private FileHandle resolve (AssetLoader loader, AssetDescriptor assetDesc) {
@@ -149,20 +146,14 @@ class AssetLoadingTask implements AsyncTask<Void> {
 		return assetDesc.file;
 	}
 
-	public Object getAsset () {
-		return asset;
-	}
-	
-	private void removeDuplicates(Array<AssetDescriptor> array) {
+	private void removeDuplicates (Array<AssetDescriptor> array) {
 		boolean ordered = array.ordered;
 		array.ordered = true;
 		for (int i = 0; i < array.size; ++i) {
 			final String fn = array.get(i).fileName;
 			final Class type = array.get(i).type;
-			for (int j = array.size - 1; j > i; --j) {
-				if (type == array.get(j).type && fn.equals(array.get(j).fileName))
-					array.removeIndex(j);
-			}
+			for (int j = array.size - 1; j > i; --j)
+				if (type == array.get(j).type && fn.equals(array.get(j).fileName)) array.removeIndex(j);
 		}
 		array.ordered = ordered;
 	}
