@@ -39,6 +39,19 @@ public abstract class AsynchronousAssetLoader<T, P extends AssetLoaderParameters
 	 * @param parameter the parameters to use for loading the asset */
 	public abstract void loadAsync (AssetManager manager, String fileName, FileHandle file, P parameter);
 
+	/** Called if this task is unloaded before {@link #loadSync(AssetManager, String, FileHandle, AssetLoaderParameters) loadSync}
+	 * is called. This method may be invoked on any thread, but will not be invoked during or after
+	 * {@link #loadSync(AssetManager, String, FileHandle, AssetLoaderParameters) loadSync}. This method is not invoked when a task
+	 * is cancelled because it throws an exception, only when the asset is unloaded before loading is complete.
+	 * <p>
+	 * The default implementation does nothing. Subclasses should release any resources acquired in
+	 * {@link #loadAsync(AssetManager, String, FileHandle, AssetLoaderParameters) loadAsync}, which may or may not have been called
+	 * before this method, but never during or after this method. Note that
+	 * {@link #loadAsync(AssetManager, String, FileHandle, AssetLoaderParameters) loadAsync} may still be executing when this
+	 * method is called and must release any resources it allocated. */
+	public void unloadAsync (AssetManager manager, String fileName, FileHandle file, P parameter) {
+	}
+
 	/** Loads the OpenGL part of the asset.
 	 * @param manager
 	 * @param fileName
