@@ -37,6 +37,7 @@
 - API Change: TexturePacker uses a dash when naming atlas page image files if the name ends with a digit or a digit + 'x'.
 - API Addition: Added Skin#setScale to control the size of drawables from the skin. This enables scaling a UI and using different sized images to match, without affecting layout.
 - API Change: Moved adding touch focus from Actor#notify to InputListener#handle (see #6082). Code that overrides InputListener#handle or otherwise handles InputEvent.Type.touchDown events must now call Stage#addTouchFocus to get touchDragged and touchUp events.
+- API Addition: Added AsynchronousAssetLoader#unloadAsync to fix memory leaks when an asset is unloaded during loading.
 
 [1.9.10]
 - API Addition: Allow target display for maximization LWJGL3 backend
